--- a/be/package.json
+++ b/be/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.29.1",
     "mongoose": "^5.12.14",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.6.1",
     "nodemon": "^2.0.7",
     "pug": "2.0.0-beta11"
   }
