--- a/be/package.json
+++ b/be/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "connect-history-api-fallback": "^1.6.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -18,6 +19,9 @@
     "morgan": "~1.9.1",
     "nodemailer": "^6.6.1",
     "nodemon": "^2.0.7",
+    "passport": "^0.4.1",
+    "passport-kakao": "^1.0.1",
+    "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11"
   }
 }
