--- a/be/package.json
+++ b/be/package.json
@@ -6,15 +6,28 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "connect-history-api-fallback": "^1.6.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "~4.16.1",
+    "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.12.14",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.7",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-kakao": "^1.0.1",
+    "passport-naver": "^1.0.6",
     "pug": "2.0.0-beta11"
+  },
+  "devDependencies": {
+    "eslint": "^7.29.0",
+    "eslint-plugin-vue": "^7.0.0-beta.4"
   }
 }
