--- a/be/package.json
+++ b/be/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "connect-history-api-fallback": "^1.6.0",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -22,6 +22,7 @@
     "passport": "^0.4.1",
     "passport-kakao": "^1.0.1",
     "passport-local": "^1.0.0",
+    "passport-naver": "^1.0.6",
     "pug": "2.0.0-beta11"
   }
 }
