--- a/be/fe/package.json
+++ b/be/fe/package.json
@@ -17,7 +17,9 @@
     "vee-validate": "^3.4.9",
     "vue": "^2.6.11",
     "vue-codemirror": "^4.0.6",
+    "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.2.0",
+    "vue-socket.io": "^3.0.10",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
