--- a/be/package.json
+++ b/be/package.json
@@ -24,6 +24,7 @@
     "passport-local": "^1.0.0",
     "passport-naver": "^1.0.6",
     "pug": "2.0.0-beta11",
+    "python-shell": "^3.0.0",
     "socket.io": "^4.1.2"
   }
 }
