--- a/be/package.json
+++ b/be/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.1",
     "mongoose": "^5.12.14",
     "morgan": "~1.9.1",
+    "node-schedule": "^2.0.0",
     "nodemailer": "^6.6.1",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
