--- a/be/fe/package.json
+++ b/be/fe/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
     "vue-core-video-player": "^0.2.0",
+    "vue-i18n": "^8.24.5",
     "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.2.0",
     "vue-socket.io": "^3.0.10",
